@@ -26,13 +26,13 @@ import static java.nio.file.StandardWatchEventKinds.ENTRY_CREATE;
 import static java.nio.file.StandardWatchEventKinds.ENTRY_MODIFY;
 import static java.util.stream.Collectors.toSet;
 import static jdk.jpackage.internal.util.function.ThrowingBiFunction.toBiFunction;
+import static jdk.jpackage.internal.util.function.ThrowingFunction.toFunction;
 import static jdk.jpackage.internal.util.function.ThrowingSupplier.toSupplier;
 
 import java.io.Closeable;
 import java.io.IOException;
 import java.io.PrintStream;
 import java.io.UncheckedIOException;
-import java.lang.reflect.InvocationTargetException;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.LinkOption;
@@ -109,7 +109,7 @@ public final class TKit {
         throw throwUnknownPlatformError();
     }).get();
 
-    static void withExtraLogStream(ThrowingRunnable action) {
+    static void withExtraLogStream(ThrowingRunnable<? extends Exception> action) {
         if (state().extraLogStream != null) {
             ThrowingRunnable.toRunnable(action).run();
         } else {
@@ -119,19 +119,19 @@ public final class TKit {
         }
     }
 
-    static void withExtraLogStream(ThrowingRunnable action, PrintStream logStream) {
+    static void withExtraLogStream(ThrowingRunnable<? extends Exception> action, PrintStream logStream) {
         withNewState(action, stateBuilder -> {
             stateBuilder.extraLogStream(logStream);
         });
     }
 
-    public static void withMainLogStream(ThrowingRunnable action, PrintStream logStream) {
+    public static void withMainLogStream(ThrowingRunnable<? extends Exception> action, PrintStream logStream) {
         withNewState(action, stateBuilder -> {
             stateBuilder.mainLogStream(logStream);
         });
     }
 
-    public static void withStackTraceStream(ThrowingRunnable action, PrintStream logStream) {
+    public static void withStackTraceStream(ThrowingRunnable<? extends Exception> action, PrintStream logStream) {
         withNewState(action, stateBuilder -> {
             stateBuilder.stackTraceStream(logStream);
         });
@@ -145,7 +145,7 @@ public final class TKit {
         STATE.set(Objects.requireNonNull(v));
     }
 
-    private static void withNewState(ThrowingRunnable action, Consumer<State.Builder> stateBuilderMutator) {
+    private static void withNewState(ThrowingRunnable<? extends Exception> action, Consumer<State.Builder> stateBuilderMutator) {
         Objects.requireNonNull(action);
         Objects.requireNonNull(stateBuilderMutator);
 
@@ -197,7 +197,7 @@ public final class TKit {
         });
     }
 
-    static <T> T runAdhocTest(ThrowingSupplier<T> action) {
+    static <T> T runAdhocTest(ThrowingSupplier<T, ? extends Exception> action) {
         final List<T> box = new ArrayList<>();
         runAdhocTest(() -> {
             box.add(action.get());
@@ -205,7 +205,7 @@ public final class TKit {
         return box.getFirst();
     }
 
-    static void runAdhocTest(ThrowingRunnable action) {
+    static void runAdhocTest(ThrowingRunnable<? extends Exception> action) {
         Objects.requireNonNull(action);
 
         final Path workDir = toSupplier(() -> Files.createTempDirectory("jdk.jpackage-test")).get();
@@ -226,26 +226,18 @@ public final class TKit {
         runTests(List.of(test), Set.of(RunTestMode.FAIL_FAST));
     }
 
-    static Runnable ignoreExceptions(ThrowingRunnable action) {
+    static Runnable ignoreExceptions(ThrowingRunnable<? extends Exception> action) {
         return () -> {
             try {
                 try {
                     action.run();
-                } catch (Throwable ex) {
-                    unbox(ex);
+                } catch (Exception ex) {
+                    throw ExceptionBox.unbox(ex);
                 }
-            } catch (Throwable throwable) {
-                printStackTrace(throwable);
+            } catch (Exception | AssertionError t) {
+                printStackTrace(t);
             }
         };
-    }
-
-    static void unbox(Throwable throwable) throws Throwable {
-        try {
-            throw throwable;
-        } catch (ExceptionBox | InvocationTargetException ex) {
-            unbox(ex.getCause());
-        }
     }
 
     public static Path workDir() {
@@ -313,8 +305,11 @@ public final class TKit {
     public static void createTextFile(Path filename, Stream<String> lines) {
         trace(String.format("Create [%s] text file...",
                 filename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(filename,
-                lines.peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(filename, lines.peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -322,16 +317,24 @@ public final class TKit {
             Collection<Map.Entry<String, String>> props) {
         trace(String.format("Create [%s] properties file...",
                 propsFilename.toAbsolutePath().normalize()));
-        ThrowingRunnable.toRunnable(() -> Files.write(propsFilename,
-                props.stream().map(e -> String.join("=", e.getKey(),
-                e.getValue())).peek(TKit::trace).collect(Collectors.toList()))).run();
+        try {
+            Files.write(propsFilename, props.stream().map(e -> {
+                return String.join("=", e.getKey(), e.getValue());
+            }).peek(TKit::trace).toList());
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
-    public static void traceFileContents(Path path, String label) throws IOException {
+    public static void traceFileContents(Path path, String label) {
         assertFileExists(path);
         trace(String.format("Dump [%s] %s...", path, label));
-        Files.readAllLines(path).forEach(TKit::trace);
+        try {
+            Files.readAllLines(path).forEach(TKit::trace);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
         trace("Done");
     }
 
@@ -428,7 +431,7 @@ public final class TKit {
         return createTempPath(role, Files::createFile);
     }
 
-    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path> createPath) {
+    private static Path createTempPath(Path templatePath, ThrowingUnaryOperator<Path, IOException> createPath) {
         if (templatePath.isAbsolute()) {
             throw new IllegalArgumentException();
         }
@@ -446,13 +449,11 @@ public final class TKit {
             return createPath.apply(path);
         } catch (IOException ex) {
             throw new UncheckedIOException(ex);
-        } catch (Throwable t) {
-            throw ExceptionBox.rethrowUnchecked(t);
         }
     }
 
     public static Path withTempDirectory(String role,
-            ThrowingConsumer<Path> action) {
+            ThrowingConsumer<Path, ? extends Exception> action) {
         final Path tempDir = ThrowingSupplier.toSupplier(
                 () -> createTempDirectory(role)).get();
         boolean keepIt = true;
@@ -896,7 +897,14 @@ public final class TKit {
     public static void assertSymbolicLinkExists(Path path) {
         assertPathExists(path, true);
         assertTrue(Files.isSymbolicLink(path), String.format
-                ("Check [%s] is a symbolic link", path));
+                ("Check [%s] is a symbolic link", Objects.requireNonNull(path)));
+    }
+
+    public static void assertSymbolicLinkTarget(Path symlinkPath, Path expectedTargetPath) {
+        assertSymbolicLinkExists(symlinkPath);
+        var targetPath = toFunction(Files::readSymbolicLink).apply(symlinkPath);
+        assertEquals(expectedTargetPath, targetPath,
+                String.format("Check the target of the symbolic link [%s]", symlinkPath));
     }
 
     public static void assertFileExists(Path path) {
@@ -1064,12 +1072,13 @@ public final class TKit {
     }
 
     /**
-     * Creates a directory by creating all nonexistent parent directories first
-     * just like java.nio.file.Files#createDirectories() and returns
-     * java.io.Closeable that will delete all created nonexistent parent
+     * Creates a directory by creating all nonexistent parent directories first just
+     * like
+     * {@link Files#createDirectories(Path, java.nio.file.attribute.FileAttribute...)}
+     * and returns java.io.Closeable that will delete all created nonexistent parent
      * directories.
      */
-    public static Closeable createDirectories(Path dir) throws IOException {
+    public static Closeable createDirectories(Path dir) {
         Objects.requireNonNull(dir);
 
         Collection<Path> dirsToDelete = new ArrayList<>();
@@ -1079,7 +1088,12 @@ public final class TKit {
             dirsToDelete.add(curDir);
             curDir = curDir.getParent();
         }
-        Files.createDirectories(dir);
+
+        try {
+            Files.createDirectories(dir);
+        } catch (IOException ex) {
+            throw new UncheckedIOException(ex);
+        }
 
         return new Closeable() {
             @Override
